<resources>
    <string name="app_name">Deepfake-Video-Detection-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings">Ayarlar</string>
    <string name="my_account">Hesabım</string>
    <string name="deep_fake_video">Deepfake Test</string>
    <string name="no">Hayır</string>
    <string name="yes">Evet</string>

    <!-- Login Fragment -->
    <string name="i_forgot_my_password">Şifrenizi mi unuttunuz?</string>

    <!-- Edit Fragment -->
    <string name="edit_profile">PROFİLİ DÜZENLE</string>
    <string name="update">Güncelle</string>
    <string name="change_password">Şifreyi Değiştir</string>
    <string name="delete_my_account">Hesabımı Sil</string>
    <string name="delete_account_confirm">Hesabınızı silmek istediğinizden emin misiniz?</string>
    <string name="deletion_success">Silme işlemi başarılı, lütfen sayfayı yenileyin</string>
    <string name="try_again_later">Daha Sonra Tekrar Deneyiniz</string>
    <string name="changes_saved">Değişiklikler kaydedildi</string>

    <!-- Profile Fragment -->
    <string name="name_surname">Ad Soyad</string>
    <string name="user_info">Hakkımda</string>
    <string name="register_date">Kayıt Tarihi</string>

    <!-- ForgotPassword Fragment -->
    <string name="please_enter_your_email_adress">Lütfen E-Mail Adresinizi Girin!</string>
    <string name="confirmation_email_sent">Onay Maili Gönderildi</string>
    <string name="password_reset_text">Şifrenizi yenilemek için lütfen E-Mail adresinizi giriniz</string>
    <string name="send">Gönder</string>

    <!-- UpdatePassword Fragment -->
    <string name="password_must_match">Girilen yeni şifreler uyuşmuyor</string>
    <string name="please_enter_different_password">Eski ve Yeni Şifre Aynı Olamaz!</string>
    <string name="please_enter_new_password">lütfen yeni şifrenizi giriniz</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="password_changed">Şifre Değişti, Lütfen Tekrar Giriş Yapın</string>

    <!-- Settings Fragment -->
    <string name="dark_mode">"Karanlık Mod"</string>
    <string name="notification">"Bildirimler"</string>
    <string name="language">Dil</string>
    <string name="language_english">İngilizce</string>
    <string name="language_turkish">Türkçe</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="blocked_users">Engellenenler</string>
    <string name="language_changed_tr">Dil Türkçe olarak değiştirildi</string>
    <string name="language_changed_en">Dil İngilizce olarak değiştirildi</string>

    <!-- Create Fragment -->
    <string name="dateOfBirth">Doğum Tarihi</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="password">Şifre</string>
    <string name="man">Erkek</string>
    <string name="woman">Kadın</string>
    <string name="click_create_button">KAYDOL Butonuna Tıklarsanız</string>
    <string name="kvkk_text_accept">Açık Rıza Metnini</string>
    <string name="you_accept">kabul etmiş olursunuz</string>
    <string name="register">Kaydol</string>
    <string name="already_have_account">Zaten hesabın var mı?</string>
    <string name="log_in">Giriş Yap</string>
    <string name="gallery_permission">Galeriye gitmek için izin gerekli</string>
    <string name="give_permission">İzni ver</string>
    <string name="please_enter_valid_name">"Lütfen Geçerli Bir Ad Giriniz"</string>
    <string name="please_enter_valid_surname">"Lütfen Geçerli Soyad Giriniz"</string>
    <string name="please_enter_valid_mail">"Lütfen Geçerli Bir Mail Adresi Giriniz"</string>
    <string name="please_enter_valid_number">"Lütfen 11 Haneli Geçerli Bir Numara Giriniz"</string>
    <string name="please_enter_valid_password">"Lütfen Geçerli Bir Şifre Giriniz"</string>
    <string name="fill_in_the_blanks">Lütfen boşlukları doldurunuz!</string>
    <string name="welcome">Giriş Başarılı</string>
    <string name="kvkk_text">Deep Fake Video Detection\n\nKİŞİSEL VERİLERİN KORUNMASI KANUNU KAPSAMINDA AÇIK RIZA BEYANI\n\n
    Deep Fake Video Detection tarafından, 6698 Sayılı Kişisel Verilerin Korunması Kanunu’nun (“KVK Kanunu”) ilgili hükümlerine uygun olarak bilginize sunulan Kişisel Verilerin Korunması Kanunu Kapsamında ;\n\n
    Kişisel verilerinin veri sorumlusu sıfatıyla Deep Fake Video Detection veya gerekli güvenlik tedbirlerini aldırmak suretiyle yetkilendirdiği veri işleyenler tarafından; Deep Fake Video Detection’nin kullanıcılarına sunmuş olduğu ürün ve hizmetlerini en iyi koşullar altında sağlayabilmesi, ürün veya hizmetlerin güvenilir ve kesintisiz bir şekilde temin edilmesi, kullanıcı memnuniyetinin en üst seviyeye çıkarılması,  farklı ürün ve hizmetlerin tanıtım, pazarlama, reklam ve kampanya faaliyetlerinin yapılması, kullanıcıların etkinliklerden , blog yazılarından ve gelişmelerden haberdar edilmesi amaçlarıyla doğrudan veya dolaylı olarak ilgili olan kişisel verilerin; başta mevzuatta öngörülen veya işlendikleri amaç için gerekli olan süre kadar muhafaza edilme ilkesi olmak üzere 6698 Sayılı Kişisel Verilerin Korunması Kanunu’nun (“KVK Kanunu”) 4. maddesinde ifade edilen genel ilkelere uygun şekilde işlenebileceğini; elde edilebileceğini, kaydedilebileceğini, işlenme amacıyla uygun süre zarfında fiziksel veya elektronik ortamda güvenli bir şekilde depolanabileceğini, muhafaza edilebileceğini, değiştirilebileceğini, yeniden düzenlenebileceğini, mevzuata uygun biçimde açıklanabileceğini ve aktarılabileceğini, devralınabileceğini, sınıflandırılabileceğini, işlenebileceğini ya da verilerin kullanılmasının engellenebileceğini; yukarıda belirtilen hususlarla ilgili olarak Deep Fake Video Detection tarafından bilgilendirildiğimi ve KVK Kanunu çerçevesinde açık rızam bulunduğunu kabul ve beyan ederim.\n\n
    Ayrıca, Deep Fake Video Detection ile paylaşmış olduğum kişisel verilerin doğru ve güncel olduğunu; işbu bilgilerde değişiklik olması halinde değişiklikleri Deep Fake Video Detection’ye bildireceğimi kabul ve beyan ederim.\n\n
    KVK Kanunu’nda tanımlanan özel nitelikli kişisel verilerim de dahil olmak üzere ilgili kişisel verilerimin işlenmesine, ilgili süreç kapsamında işlenme amacı ile sınırlı olmak üzere kullanılmasına ve paylaşılmasına, gereken süre zarfında saklanmasına açık rızam olduğunu ve bu hususta tarafıma gerekli aydınlatmanın yapıldığını; işbu metni, Deep Fake Video Detection Kişisel Verilerin Korunması ve İşlenmesi Yönetmeliğini ve Aydınlatma Metnini okuduğumu ve anladığımı kabul ederim.\n\n
</string>
</resources>