<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.update_password.UpdatePasswordFragment">

    <LinearLayout

        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_logo"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/please_enter_new_password"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_message_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_message_background"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextNewPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_message_background"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColorHint="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="75dp"
            android:background="@drawable/edittext_message_background"
            android:paddingHorizontal="10dp"
            android:text="@string/change_password" />

    </LinearLayout>
</ScrollView>